He terminado con características audi

--- a/Característicasaudi.html
+++ b/Característicasaudi.html
@@ -138,5 +138,88 @@
                 <td>Transmisión</td>
                 <td>quattro, Manual 6 velocidades</td>
             </tr>
+            <tr>
+                <td>Tracción</td>
+                <td>A las 4 ruedas</td>
+            </tr>
+            <tr>
+                <td>Aceleración 0-100 km/h</td>
+                <td>4,6 s</td>
+            </tr>
+            <tr>
+                <td>Velocidad máxima</td>
+                <td>250 km/h</td>
+            </tr>
+            <tr>
+                <td>Consumo medio (L/100 km)</td>
+                <td>12,6 l/100 km Ciudad, 6,8 l/100 km Carretera</td>
+            </tr>
+            <tr>
+                <td>Emisiones de CO2</td>
+                <td>209 g/km</td>
+            </tr>
+               </table>
+  </p>
+ </div>
         </table>
-          
+<div class="marco">
+  <p>
+    <h3>Audi A6</h3>
+    <img src="http://www.audi.es/etc/medialib/ngw/product/a6/a6/my_2011_c7/multimedia.Par.0021.Image.jpg/704x396_aa6_l_10436.jpg"/>El Audi A6 es un automóvil de turismo del segmento E producido por el fabricante alemán Audi desde el año 1994. Es un cinco plazas con motor delantero longitudinal, que se ofrece en tracción delantera o a las cuatro ruedas.
+    Todas las generaciones fueron producidas con carrocerías sedán de cuatro puertas y familiar de cinco puertas; ésta última se denomina comercialmente "A6 Avant". Las versiones deportivas del A6 se denominan "S6" y "RS6", y la familiar con aspecto de todoterreno "A6 Allroad quattro".
+    <table class="rubencorto">
+    <tr>
+        <td>Ficha Técnica</td>
+        <td>Audi A6</td>
+    </tr>
+    <tr>
+        <td>Motor</td>
+        <td>4 cilindros en línea, 4 válvulas por cilindro</td>
+    </tr>
+    <tr>
+        <td>Potencia</td>
+        <td>177 CV 4200 rpm</td>
+    </tr>
+    <tr>
+        <td>Acceleración 0-100 kn/h</td>
+        <td>8,7 s</td>
+    </tr>
+     </table>
+     </div>
+ <div class="marco">
+  <p>
+    <h3>Audi A8</h3>
+    El A8 tiene carrocería sedán de cuatro puertas y motor delantero longitudinal. Existen versiones con tracción delantera o a las cuatro ruedas, con cuatro y cinco plazas, y con batalla corta o larga. Al contrario que el A4 y el A6, nunca se produjo una variante familiar.
+    
+    Interior del Audi A8<img class="izquierda" src="http://www.audi.es/etc/medialib/ngw/product/a8/a8/my_2014/multimedia.Par.0053.Image.jpg/704x396_aa8_d_131072.jpg"/><img class="aparecer" src="http://www.audi.es/etc/medialib/ngw/product/a8/a8/my_2014/multimedia.Par.0050.Image.jpg/704x396_aa8_131002.jpg"/>
+    El Audi A8 cuenta con con un diseño exterior a cargo de Wolfgang Egger y equipa cuatro motores, dos diésel: 4.2 V8 TDI de 351 CV y 3.0 V6 TDI de 250 CV y dos gasolina: 4.0 V8 TFSI de 420 CV y un 6.3 W12 FSI de 500 CV.
+    </div>
+     <div class="marco">
+  <p>
+    <h3>Audi Q3</h3>
+    <img class="derecha" src="http://www.audi.es/etc/medialib/ngw/product/q3/q3/my_2011/multimedia.Par.0023.Image.jpg/704x396_aq3_10005.jpg"/>El Audi Q3 es un automóvil todocamino del segmento C fabricado por la marca alemana Audi.
+    Presenta una longitud de 4.38 metros, una anchura de 1.82 metros y una altura de 1.60 metros.
+La versión básica, el la Audi Q3 2.0 TDI o TFSI de 140 caballos, ofrece un consumo de menos de 5,2 litros a los cien kilómetros. Este modelo se encuentra con motores de cuatro cilindros tanto en gasolina como diésel, contando con tracción integral en toda la gama. El Q3 viene a completar la gama más compacta de los SUV de Audi, donde el Q7 y el Q5 ocupan la la serie de mayor envergadura. Este modelo comparte muchas características con el VW Tiguan. Su reducida altura hace que no sólo se pueda clasificar en la categoría de los crossover, sino también el el grupo de las berlinas.
+<table class="ruben">
+      <tr>
+       <td>Ficha Técnica</td>
+        <td>Audi Q3</td>
+       </tr>
+       <tr>
+           <td>Motor</td>
+           <td>Motor de gasolina de 4 cilindros en línea, inyección directa de gasolina y sobrealimentación turbo para gases de escape</td>
+       </tr>
+       <tr>
+           <td>Potencia</td>
+           <td>150 CV a 5000-6000 rpm</td>
+       </tr>
+          <tr>
+              <td>Acceleración 0-100km/h</td>
+              <td>9,2 s</td>
+          </tr>
+          <tr>
+              <td>Consumo</td>
+              <td>7,4 l/100 km por ciudad; 5 l/100 km por carretera</td>
+          </tr>
+          </table>
+          </body>
