Precios aston y audi acabados audi historia arreglada yvarios

--- a/Característicasaudi.html
+++ b/Característicasaudi.html
@@ -1,12 +1,12 @@
 <html>
    <head>
       <title>
-       car-styles/Aston Martin 
+       car-styles/Audi 
       </title>
       <meta charset="utf-8"> 
       <link rel="stylesheet" href="Stylesheet/astonmartin.css"/>
    </head>
-   <body>
+
 
 <header>
    <div class="contenedor" id="uno">
@@ -20,8 +20,6 @@
    <div class="contenedor"  id="tres">
        <img class="icon" src="iconos/bulb.png"/>
        <p class="texto"><a href="Característicasaudi.html">Características</a></p>
-
-
    </div>
    <div class="contenedor"  id="cuatro">
        <img class="icon" src="iconos/database.png"/>
@@ -223,3 +221,4 @@ La versión básica, el la Audi Q3 2.0 TDI o TFSI de 140 caballos, ofrece un con
           </tr>
           </table>
           </body>
+</html>          
