--- a/LamboPrecio.html
+++ b/LamboPrecio.html
@@ -6,7 +6,7 @@
       <meta charset="utf-8"> 
       <link rel="stylesheet" href="Stylesheet/astonmartin.css"/>
    </head>
-   <body>
+  
 
 <header>
    <div class="contenedor" id="uno">
@@ -28,5 +28,12 @@
    </div>
     
 </header>
+<body>
+  <div class="marco">
+    <p><h1>
+    </h1></p>  
+      
+  </div>  
+</body>
    
    </html>
