--- a/LamborghiniPrincipal.html
+++ b/LamborghiniPrincipal.html
@@ -7,7 +7,7 @@
       <link rel="stylesheet" href="Stylesheet/astonmartin.css"/>
    </head>
    <body>
-
+<h1 class="minana">Lamborghini</h1>
 <header>
    <div class="contenedor" id="uno">
        <img class="icon" src="iconos/home.png"/>
@@ -28,5 +28,6 @@
    </div>
     
 </header>
+</body>
    
    </html>
