--- a/audi.html
+++ b/audi.html
@@ -2,29 +2,30 @@
 <html>
    <head>
       <title>
-       car-styles/Aston Martin 
+       car-styles/Audi 
       </title>
       <meta charset="utf-8"> 
       <link rel="stylesheet" href="Stylesheet/astonmartin.css"/>
    </head>
    <body>
-
+<h1 class="minana">Audi</h1>
 <header>
    <div class="contenedor" id="uno">
        <img class="icon" src="iconos/home.png"/>
-       <p class="texto">Pagina</p>
+       <p class="texto"><a href="index.html">Pagina</a></p>
    </div> 
    <div class="contenedor"  id="dos">
        <img class="icon" src="iconos/book-lines.png"/>
-       <p class="texto">Historia</p>
+       <p class="texto"><a href="historiaudi.html">Historia</a></p>
    </div>
    <div class="contenedor"  id="tres">
        <img class="icon" src="iconos/bulb.png"/>
-       <p class="texto">Características</p>
+       <p class="texto"><a href="Característicasaudi.html">Características</a></p>
    </div>
    <div class="contenedor"  id="cuatro">
        <img class="icon" src="iconos/database.png"/>
-       <p class="texto">Precios</p>
+       <p class="texto"><a href="preciosaudi.html">Precios</a></p>
    </div>
     
 </header>
+</body>
