--- a/chevrolet.html
+++ b/chevrolet.html
@@ -1,30 +1,33 @@
-
 <html>
    <head>
       <title>
-       car-styles/Aston Martin 
+       car-styles/Chevrolet 
       </title>
       <meta charset="utf-8"> 
       <link rel="stylesheet" href="Stylesheet/astonmartin.css"/>
    </head>
    <body>
+<h1 class="minana">Chevrolet</h1>   
 
 <header>
    <div class="contenedor" id="uno">
        <img class="icon" src="iconos/home.png"/>
-       <p class="texto">Pagina</p>
+       <p class="texto"><a href="index.html">Pagina</a></p>
    </div> 
    <div class="contenedor"  id="dos">
        <img class="icon" src="iconos/book-lines.png"/>
-       <p class="texto">Historia</p>
+       <p class="texto"><a href="chevyhistoria.html">Historia</a></p>
    </div>
    <div class="contenedor"  id="tres">
        <img class="icon" src="iconos/bulb.png"/>
-       <p class="texto">Características</p>
+       <p class="texto"><a href="chevycaracteristicas.html">Características</a></p>
+
+
    </div>
    <div class="contenedor"  id="cuatro">
        <img class="icon" src="iconos/database.png"/>
-       <p class="texto">Precios</p>
+       <p class="texto"><a href="chevyprecio.html">Precios</a></p>
    </div>
     
 </header>
+</body>
