--- a/preciosaudi.html
+++ b/preciosaudi.html
@@ -1,12 +1,11 @@
 <html>
    <head>
       <title>
-       car-styles/Aston Martin 
+       car-styles/Audi 
       </title>
       <meta charset="utf-8"> 
       <link rel="stylesheet" href="Stylesheet/astonmartin.css"/>
    </head>
-
 
 <header>
    <div class="contenedor" id="uno">
@@ -15,24 +14,22 @@
    </div> 
    <div class="contenedor"  id="dos">
        <img class="icon" src="iconos/book-lines.png"/>
-       <p class="texto"><a href="historiaston.html">Historia</a></p>
+       <p class="texto"><a href="historiaudi.html">Historia</a></p>
    </div>
    <div class="contenedor"  id="tres">
        <img class="icon" src="iconos/bulb.png"/>
-       <p class="texto"><a href="Caracteristicasaston.html">Características</a></p>
-
-
+       <p class="texto"><a href="Característicasaudi.html">Características</a></p>
    </div>
    <div class="contenedor"  id="cuatro">
        <img class="icon" src="iconos/database.png"/>
-       <p class="texto"><a href="preciosaston.html">Precios</a></p>
+       <p class="texto"><a href="preciosaudi.html">Precios</a></p>
    </div>
     
 </header>
-
-<div class="marco">
-<h1>Precios</h1>
-    <p>
+        <body>
+<div class="marco">  
+        <p><h1>Precios</h1>
+            <p>
     <table class="ruben">
     <tr>
     <td>Modelo</td>
@@ -40,43 +37,29 @@
     <td>Precio</td>
     </tr>
     <tr>
-    <td>Cygnet</td>
-    <td></td>
-    <td>40 960 €</td>
+    <td>Audi</td>
+    <td>R8</td>
+    <td>139.805€</td>
     </tr>
     <tr>
-    <td>Cygnet</td>
-    <td>CVT</td>
-    <td>42 434 €</td>
+    <td>Audi TT</td>
+    <td>coupé</td>
+    <td>33.990€</td>
     </tr>
     <tr>
-    <td>DB9</td>
-    <td>Coupé</td>
-    <td>211 387 €</td>
+    <td>Audi</td>
+    <td>A6</td>
+    <td>41.060€</td>
     </tr>
     <tr>
-    <td>Rapide</td>
-    <td></td>
-    <td>228 781 €</td>
+    <td>Audi</td>
+    <td>A8</td>
+    <td>85.320€</td>
     </tr>
     <tr>
-    <td>Vanquish</td>
-    <td></td>
-    <td>300 075 €</td>
+    <td>Audi</td>
+    <td>Q3</td>
+    <td>30.140€</td>
     </tr>
-    <tr>
-    <td>Vantage</td>
-    <td>V8</td>
-    <td>132 314 €</td>
-    </tr>
-    <tr>
-    <td>Vantage</td>
-    <td>V12</td>
-    <td>232 372 €</td>
-    </tr>
-    </table>
-    </p>
+
 </div>
-
-</body>
-
