--- a/astonmartin.html
+++ b/astonmartin.html
@@ -7,7 +7,7 @@
       <link rel="stylesheet" href="Stylesheet/astonmartin.css"/>
    </head>
    <body>
-
+<h1 class="minana">Aston Martin</h1>
 <header>
    <div class="contenedor" id="uno">
        <img class="icon" src="iconos/home.png"/>
@@ -28,6 +28,7 @@
    </div>
     
 </header>
+</body>
 
  
 
