Precios Lambor acabado

--- a/LamboPrecio.html
+++ b/LamboPrecio.html
@@ -30,8 +30,65 @@
 </header>
 <body>
   <div class="marco">
-    <p><h1>
-    </h1></p>  
+    <p><h1>Precios</h1>
+      <table class="ruben6">
+    <tr>
+     <td>Modelo</td>
+     <td>Precio</td>
+    </tr>
+    <tr>
+     <td>350 GTV</td>
+     <td>No se vende</td>
+    </tr>
+    <tr>
+     <td>Countach</td>
+     <td>No se vende</td>
+    </tr>
+    <tr>
+     <td>Silhouette</td>
+     <td>No se vende</td>
+    </tr>
+    <tr>
+     <td>Diablo</td>
+     <td>No se vende</td>
+    </tr>
+    <tr>
+     <td>Reventón</td>
+     <td>No se vende</td>
+    </tr>
+    <tr>
+     <td>Gallardo</td>
+     <td>No se vende</td>
+    </tr>
+    <tr>
+     <td>Murcielago</td>
+     <td>No se vende</td>
+    </tr>
+    <tr>
+     <td>Aventador</td>
+     <td>Desde 309.000€</td>
+    </tr>
+    <tr>
+     <td>Sesto Elemento</td>
+     <td>No se vende</td>
+    </tr>
+    <tr>
+     <td>Huracan</td>
+     <td>Sin precio definido</td>
+    </tr>
+    <tr>
+     <td>Estoque</td>
+     <td>No se vende</td>
+    </tr>
+    <tr>
+     <td>Veneno</td>
+     <td>3.300.000 (Sin impuestos)</td>
+    </tr>
+    <tr>
+     <td>Egoista</td>
+     <td>No se vende</td>
+    </tr>
+    </p>  
       
   </div>  
 </body>
