ferrari pal jordi

--- a/chevycaracteristicas.html
+++ b/chevycaracteristicas.html
@@ -1,14 +1,11 @@
 <html>
    <head>
       <title>
-       car-styles/Ferrari 
+       car-styles/Chevrolet 
       </title>
       <meta charset="utf-8"> 
       <link rel="stylesheet" href="Stylesheet/astonmartin.css"/>
    </head>
-   <body>
-<h1 class="minana">Ferrari</h1>   
-
 <header>
    <div class="contenedor" id="uno">
        <img class="icon" src="iconos/home.png"/>
@@ -16,18 +13,17 @@
    </div> 
    <div class="contenedor"  id="dos">
        <img class="icon" src="iconos/book-lines.png"/>
-       <p class="texto"><a href="ferrarihistoria.html">Historia</a></p>
+       <p class="texto"><a href="chevyhistoria.html">Historia</a></p>
    </div>
    <div class="contenedor"  id="tres">
        <img class="icon" src="iconos/bulb.png"/>
-       <p class="texto"><a href="ferraricaracteristicas.html">Características</a></p>
+       <p class="texto"><a href="chevycaracteristicas.html">Características</a></p>
 
 
    </div>
    <div class="contenedor"  id="cuatro">
        <img class="icon" src="iconos/database.png"/>
-       <p class="texto"><a href="ferrariprecio.html">Precios</a></p>
+       <p class="texto"><a href="chevyprecio.html">Precios</a></p>
    </div>
     
 </header>
-</body>
