web finalizada por el momento

--- a/chevyhistoria.html
+++ b/chevyhistoria.html
@@ -25,7 +25,7 @@
    </div>
    <div class="contenedor"  id="cuatro">
        <img class="icon" src="iconos/database.png"/>
-       <p class="texto"><a href="chevyprecio.html">Precios</a></p>
+       <p class="texto"><a href="chevyprecios.html">Precios</a></p>
    </div>
     
 </header>
