--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
    
     <img alt="full screen background image" src="Lamborghinimagenes/fondofinal.jpg" id="full-screen-background-image" />
    
-      <h1>CAR STYLES <img src="imagenes/icono.JPEG"</h1>
+      <h1>CAR STYLES <img src="imagenes/icono.JPEG"/></h1>
           <div id="slideshow-wrap">
         <input type="radio" id="button-1" name="controls" checked="checked"/>
         <label for="button-1"></label>
